<resources>
    <string name="app_name">listview taller</string>
    <string name="op1">Áreas</string>
    <string name="op2">Volúmenes</string>
    <string name="op3">Operaciones Realizadas</string>
    <array name="opciones">
        <item>@string/op1</item>
        <item>@string/op2</item>
        <item>@string/op3</item>
    </array>
    <array name="volumenes">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </array>
    <array name="areas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </array>
    <string name="cuadrado">Cuadrado</string>
    <string name="area_cuadrado">Lado:</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="base">Base:</string>
    <string name="altura">Altura:</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="triangulo">Triángulo</string>
    <string name="circulo">Círculo</string>
    <string name="radio">Radio:</string>
    <string name="esfera">Esfera</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="arista">Arista:</string>
    <string name="cubo">cubo</string>
    <string name="realizadas">REALIZADAS</string>
    <string name="numero">No.</string>
    <string name="operacion">Operacíon</string>
    <string name="datos">datos</string>
    <string name="resultado">Resultado</string>
    <string name="error1">Dijite un numero</string>
    <string name="error2">Dijite un numero mayor a cero</string>
    <string name="v_cilindro">Volumen de un cilindro</string>
    <string name="a_circulo">Area de un circulo</string>
    <string name="a_triangulo">Area de un triangulo</string>
    <string name="v_cono">Volumen de un cono"</string>
    <string name="a_cuadrado">Area de un cuadrado</string>
    <string name="v_cubo">Volumen de un cubo</string>
    <string name="v_esfera">Volumen de una esfera</string>
    <string name="a_rectangulo">Area de un rectangulo</string>
</resources>
